[project]
name = "langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "langchain>=0.3.26",
    "langchain-groq>=0.3.2",
    "langchain-tavily>=0.2.3",
    "langgraph",
    "langsmith>=0.4.1",
    "python-dotenv>=1.1.0",
]

[tool.uv.sources]
langgraph = { workspace = true }
